<resources>
    <string name="app_name">Chat con Kotlin</string>

    <string name="item_perfil">Perfil</string>
    <string name="item_usuarios">Usuarios</string>
    <string name="item_chats">Chats</string>

    <string name="tv_Titulo">Titulo</string>

    <string name="opcionEmail">Continuar con Email</string>
    <string name="opcionGoogle">Continuar con Google</string>

    <string name="txt_login">Login</string>
    <string name="et_Email">Correo electrónico</string>
    <string name="et_Password">Contraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="txt_no_tienes_cuenta">¿No tienen una cuenta?</string>
    <string name="tv_registrarme">Registrarme</string>

    <string name="btn_ActualizarInfo">Actualizar</string>
    <string name="btn_CambiarPass">Cambiar contraseña</string>
    <string name="btn_Cerrarsesion">Cerrar sesión</string>

    <string name="txt_nombres">Nombres: </string>
    <string name="tv_nombres"> --</string>
    <string name="txt_email">Email: </string>
    <string name="tv_email"> --</string>
    <string name="txt_proveedor">Proveedor: </string>
    <string name="tv_proveedor"> --</string>
    <string name="txt_t_registro">Miembro desde: </string>
    <string name="tv_t_registro"> --</string>

    <string name="txt_registro">Registro</string>
    <string name="et_Nombres">Nombres</string>
    <string name="et_R_Password">Repita la contraseña</string>
    <string name="btn_Registrar">Registrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>